Update LICENSE link

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 
         <footer>
             <p>Made with<i class="bi bi-heart-fill"></i>in only one html file</p>
-            <a href=""><i class="bi bi-c-circle"></i>2024 Gaël LOPES DA SILVA</a>
+            <a href="https://github.com/Gael-Lopes-Da-Silva/portfolio?tab=BSD-3-Clause-1-ov-file"><i class="bi bi-c-circle"></i>2024 Gaël LOPES DA SILVA</a>
         </footer>
     </body>
 </html>
