--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="shortcut icon" href="#">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
-        <style>
+    <link rel="shortcut icon" href="#">
+
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');
 
         body {
@@ -233,12 +234,12 @@
             border-radius: 10px;
         }
 
-        #projects>div>#loading {
+        #loading {
             font-size: 3rem;
             animation: beat .50s infinite alternate;
         }
 
-        #projects>#projects_error {
+        #projects_error {
             display: flex;
             justify-content: center;
             flex-direction: row;
@@ -246,15 +247,15 @@
             font-weight: bold;
         }
 
-        #projects>#projects_error>i {
+        #projects_error>i {
             margin-right: 6px;
         }
 
-        #projects>#projects_error>p {
+        #projects_error>p {
             margin: 0;
         }
 
-        #projects>div>.projects_item {
+        .projects_item {
             width: 95%;
             padding: 10px;
             margin: 5px;
@@ -267,41 +268,41 @@
             transition: 50ms;
         }
 
-        #projects>div>.projects_item:active {
+        .projects_item:active {
             margin-top: 8px;
             margin-bottom: 2px;
         }
 
-        #projects>div>.projects_item>.projects_item_title {
+        .projects_item_title {
             display: flex;
         }
 
-        #projects>div>.projects_item>.projects_item_title>i {
+        .projects_item_title>i {
             display: flex;
             align-items: center;
             margin-right: 6px;
         }
 
-        #projects>div>.projects_item>.projects_item_title>p {
+        .projects_item_title>p {
             margin: 0;
             font-weight: bold;
             font-size: 1.4rem;
         }
 
-        #projects>div>.projects_item>.projects_item_description {
+        .projects_item_description {
             margin-bottom: 10px;
         }
 
-        #projects>div>.projects_item>.projects_item_badges {
+        .projects_item_badges {
             display: flex;
         }
 
-        #projects>div>.projects_item>.projects_item_badges>div {
+        .projects_item_badges>div {
             display: flex;
             margin-right: 5px;
         }
 
-        #projects>div>.projects_item>.projects_item_badges>div>p {
+        .projects_item_badges>div>p {
             margin: 0;
             padding: 1px;
             padding-left: 6px;
@@ -315,7 +316,7 @@
             box-shadow: 0px 3px 2px rgb(28 26 23 / 40%);
         }
 
-        #projects>div>.projects_item>.projects_item_badges>div>span {
+        .projects_item_badge_color {
             padding: 1px;
             padding-left: 4px;
             padding-right: 6px;
@@ -421,10 +422,37 @@
         footer>a>i {
             margin-right: 6px;
         }
-        </style>
+    </style>
 
-        <style>
-        @keyframes beat{
+    <style>
+        .halloween {
+            background-color: #ff7518;
+            border-color: #a84c0f;
+        }
+
+        .valentinesDay {
+            background-color: #ff69b4;
+            border-color: #b2497d;
+        }
+
+        .saintPatricksDay {
+            background-color: #3b7a57;
+            border-color: #2e573a;
+        }
+
+        .christmas_header {
+            background-color: #008000;
+            border-color: #005400;
+        }
+
+        .christmas_footer {
+            background-color: #4A382E;
+            border-color: #332720;
+        }
+    </style>
+
+    <style>
+        @keyframes beat {
             to {
                 transform: scale(1.2);
                 opacity: 0.4;
@@ -440,23 +468,23 @@
                 margin-bottom: 20px;
             }
 
-            #projects>div>.projects_item>.projects_item_title>p {
+            .projects_item_title>p {
                 font-size: 1.2rem;
             }
 
-            #projects>div>.projects_item>.projects_item_description {
+            .projects_item_description {
                 font-size: 0.8rem;
             }
 
-            #projects>div>.projects_item>.projects_item_badges {
+            .projects_item_badges {
                 flex-wrap: wrap;
             }
 
-            #projects>div>.projects_item>.projects_item_badges>div>p {
+            .projects_item_badges>div>p {
                 font-size: 0.6rem;
             }
 
-            #projects>div>.projects_item>.projects_item_badges>div>span {
+            .projects_item_badges>div>span {
                 font-size: 0.6rem;
             }
         }
@@ -536,14 +564,14 @@
                 margin-bottom: 20px;
             }
         }
-        </style>
-    </head>
+    </style>
+</head>
 
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
-        <script>
+    <script>
         $(function () {
             { // age calculation
                 const birthday = new Date("06/19/2003");
@@ -566,12 +594,55 @@
                     $("#clipboard").css("color", "#00FF00")
                     $("#clipboard").css("cursor", "auto")
 
-                    setTimeout(function() {
+                    setTimeout(function () {
                         $("#clipboard").attr("class", "bi bi-clipboard2-fill")
                         $("#clipboard").css("color", "#000000")
                         $("#clipboard").css("cursor", "pointer")
                     }, 5000);
                 });
+            }
+
+            { // holidays
+                var holidayClass = "";
+
+                const today = new Date();
+                const holidays = {
+                    "halloween": new Date(today.getFullYear(), 9, 31),
+                    "christmas": new Date(today.getFullYear(), 11, 25),
+                    "valentinesDay": new Date(today.getFullYear(), 1, 14),
+                    "saintPatricksDay": new Date(today.getFullYear(), 2, 17),
+                };
+
+                const isInRange = (holiday) => Math.abs((today - holiday) / (1000 * 60 * 60 * 24)) <= 5;
+
+                if (isInRange(holidays["halloween"])) {
+                    $("header").addClass("halloween");
+                    $("footer").addClass("halloween");
+                    $(".projects_item_badge_color").addClass("halloween");
+                    $("footer>p>i").css("color", "#000000");
+                    $("footer>p>i").attr("class", "bi bi-emoji-surprise-fill");
+
+                    holidayClass = "halloween";
+                } else if (isInRange(holidays["christmas"])) {
+                    $("header").addClass("christmas_header");
+                    $("footer").addClass("christmas_footer");
+                    $("footer>p>i").css("color", "#008000");
+                    $("footer>p>i").attr("class", "bi bi-tree-fill");
+
+                    holidayClass = "christmas_header";
+                } else if (isInRange(holidays["valentinesDay"])) {
+                    $("header").addClass("valentinesDay");
+                    $("footer").addClass("valentinesDay");
+
+                    holidayClass = "valentinesDay";
+                } else if (isInRange(holidays["saintPatricksDay"])) {
+                    $("header").addClass("saintPatricksDay");
+                    $("footer").addClass("saintPatricksDay");
+                    $("footer>p>i").css("color", "#ffdd00");
+                    $("footer>p>i").attr("class", "bi bi-shield-fill");
+
+                    holidayClass = "saintPatricksDay";
+                }
             }
 
             { // projects fetching
@@ -590,23 +661,23 @@
 
                         let stars_badge = $("<div>");
                         stars_badge.append($("<p>", { text: "stars" }));
-                        stars_badge.append($("<span>", { text: item.stargazers_count }));
+                        stars_badge.append($("<span>", { text: item.stargazers_count, class: `projects_item_badge_color ${holidayClass}` }));
                         projects_item_badges.append(stars_badge);
 
                         let forks_badge = $("<div>");
                         forks_badge.append($("<p>", { text: "forks" }));
-                        forks_badge.append($("<span>", { text: item.forks_count }));
+                        forks_badge.append($("<span>", { text: item.forks_count, class: `projects_item_badge_color ${holidayClass}` }));
                         projects_item_badges.append(forks_badge);
 
                         let watchers_badge = $("<div>");
                         watchers_badge.append($("<p>", { text: "watchers" }));
-                        watchers_badge.append($("<span>", { text: item.watchers_count }));
+                        watchers_badge.append($("<span>", { text: item.watchers_count, class: `projects_item_badge_color ${holidayClass}` }));
                         projects_item_badges.append(watchers_badge);
 
                         if (item.language !== null) {
                             let language_badge = $("<div>");
                             language_badge.append($("<p>", { text: "language" }));
-                            language_badge.append($("<span>", { text: item.language }));
+                            language_badge.append($("<span>", { text: item.language, class: `projects_item_badge_color ${holidayClass}` }));
                             projects_item_badges.append(language_badge);
                         }
 
@@ -625,105 +696,114 @@
                 });
             }
         });
-        </script>
+    </script>
 
-        <header>
-            <h1>Welcome To My Portfolio</h1>
-        </header>
+    <header>
+        <h1>Welcome To My Portfolio</h1>
+    </header>
 
-        <div id="infos">
-            <div id="infos_top">
-                <div>
-                    <h2>Gaël LOPES DA SILVA</h2>
-                    <div>
-                        <h3 id="age"></h3>
-                        <h3>years old</h3>
-                    </div>
-                    <h4>
-                        <a href="mailto:gael.lopes-da-silva@outlook.fr">gael.lopes-da-silva@outlook.fr</a> <i id="clipboard" class="bi bi-clipboard2-fill"></i>
-                    </h4>
-                </div>
-                <img src="assets/avatar.png" alt="avatar" draggable="false">
-            </div>
-            <div id="infos_middle">
-                <h2>About Me</h2>
-                <span></span>
-                <p>I am a computer science student currently studying in France. I love the world of computing and programming. I was also able to carry out a few projects that you can find on my GitHub, GitLab pages and on the project page of my portfolio.</p>
-            </div>
-            <div id="infos_bottom">
-                <h2>My Links</h2>
-                <span></span>
-                <div>
-                    <a href="https://github.com/Gael-Lopes-Da-Silva">
-                        <i class="bi bi-github"></i>
-                    </a>
-                    <a href="https://gitlab.com/Gael-Lopes-Da-Silva">
-                        <i class="bi bi-gitlab"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/gael-lopes-da-silva/">
-                        <i class="bi bi-linkedin"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div id="projects">
-            <h2>My Projects</h2>
-            <span></span>
-
+    <div id="infos">
+        <div id="infos_top">
             <div>
-                <i id="loading" class="bi bi-github"></i>
+                <h2>Gaël LOPES DA SILVA</h2>
+                <div>
+                    <h3 id="age"></h3>
+                    <h3>years old</h3>
+                </div>
+                <h4>
+                    <a href="mailto:gael.lopes-da-silva@outlook.fr">gael.lopes-da-silva@outlook.fr</a>
+                    <i id="clipboard" class="bi bi-clipboard2-fill"></i>
+                </h4>
+            </div>
+            <img src="assets/avatar.png" alt="avatar" draggable="false">
+        </div>
+        <div id="infos_middle">
+            <h2>About Me</h2>
+            <span></span>
+            <p>I am a computer science student currently studying in France. I love the world of computing and
+                programming. I was also able to carry out a few projects that you can find on my GitHub, GitLab pages
+                and on the project page of my portfolio.</p>
+        </div>
+        <div id="infos_bottom">
+            <h2>My Links</h2>
+            <span></span>
+            <div>
+                <a href="https://github.com/Gael-Lopes-Da-Silva">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://gitlab.com/Gael-Lopes-Da-Silva">
+                    <i class="bi bi-gitlab"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/gael-lopes-da-silva/">
+                    <i class="bi bi-linkedin"></i>
+                </a>
             </div>
         </div>
+    </div>
 
-        <div id="background">
-            <h2>My Academic Background</h2>
-            <span></span>
+    <div id="projects">
+        <h2>My Projects</h2>
+        <span></span>
 
-            <details open>
-                <summary>BTS SIO - SLAM</summary>
-                <p>2022 - 2024</p>
-                <div>
-                    <p>It's a formation in the field of IT which takes place over 2 years. During these two years, we must immerse ourselves in the professional world via 5-week internships in the first and second year.</p>
-                </div>
-            </details>
-
-            <details open>
-                <summary>One Year Of Computer Science Degree</summary>
-                <p>2021 - 2022</p>
-                <div>
-                    <p>
-                        I have done 1 year of Computer Science Degree at Orélans in France.
-                        I choose what was called Portail 1 in the Computer Science Degree course.
-                        This course has the following options:
-                    </p>
-                    <ul>
-                        <li>Mathematics</li>
-                        <li>Computer Science</li>
-                        <li>Phisycs</li>
-                    </ul>
-                </div>
-            </details>
-
-            <details open>
-                <summary>High School Baccalaureate</summary>
-                <p>2018 - 2021</p>
-                <div>
-                    <p>
-                        I have done a A Level degree in France at Lycée Claude de France.
-                        I choosed the following options as my A Level :
-                    </p>
-                    <ul>
-                        <li>Mathematics</li>
-                        <li>Computer Science</li>
-                    </ul>
-                </div>
-            </details>
+        <div>
+            <i id="loading" class="bi bi-github"></i>
         </div>
+    </div>
 
-        <footer>
-            <p>Made with<i class="bi bi-heart-fill"></i>in only one html file</p>
-            <a href="https://github.com/Gael-Lopes-Da-Silva/portfolio?tab=BSD-3-Clause-1-ov-file"><i class="bi bi-c-circle"></i>2024 Gaël LOPES DA SILVA</a>
-        </footer>
-    </body>
+    <div id="background">
+        <h2>My Academic Background</h2>
+        <span></span>
+
+        <details open>
+            <summary>BTS SIO - SLAM</summary>
+            <p>2022 - 2024</p>
+            <div>
+                <p>
+                    It's a formation in the field of IT which takes place over 2 years. During these two years, we must
+                    immerse ourselves in the professional world via 5-week internships in the first and second year.
+                </p>
+            </div>
+        </details>
+
+        <details open>
+            <summary>One Year Of Computer Science Degree</summary>
+            <p>2021 - 2022</p>
+            <div>
+                <p>
+                    I have done 1 year of Computer Science Degree at Orélans in France.
+                    I choose what was called Portail 1 in the Computer Science Degree course.
+                    This course has the following options:
+                </p>
+                <ul>
+                    <li>Mathematics</li>
+                    <li>Computer Science</li>
+                    <li>Phisycs</li>
+                </ul>
+            </div>
+        </details>
+
+        <details open>
+            <summary>High School Baccalaureate</summary>
+            <p>2018 - 2021</p>
+            <div>
+                <p>
+                    I have done a A Level degree in France at Lycée Claude de France.
+                    I choosed the following options as my A Level :
+                </p>
+                <ul>
+                    <li>Mathematics</li>
+                    <li>Computer Science</li>
+                </ul>
+            </div>
+        </details>
+    </div>
+
+    <footer>
+        <p>Made with<i class="bi bi-heart-fill"></i>in a single html file</p>
+        <a href="https://github.com/Gael-Lopes-Da-Silva/portfolio?tab=BSD-3-Clause-1-ov-file">
+            <i class="bi bi-c-circle"></i>2024 Gaël LOPES DA SILVA
+        </a>
+    </footer>
+</body>
+
 </html>
