Update some colors

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             margin-right: auto;
             margin-left: auto;
             border-radius: 100%;
-            border: solid 5px #ccb9a1;
+            border: solid 5px #4b0e37;
             background-color: #6f1451;
         }
 
@@ -598,7 +598,7 @@
                     $("#infos_top>img").css("background-color", brightColor).css("border-color", darkColor);
                     $(".projects_item_badge_color").css("background-color", brightColor).css("border-color", darkColor);
 
-                    $("footer>p>i").attr("class", "bi bi-emoji-surprise-fill").css("color", "#000000");
+                    $("footer>p>i").attr("class", "bi bi-emoji-surprise-fill").css("color", "#161616");
                     $("header>h1").html("🎃 Welcome To My Portfolio 🎃");
 
                     badgesStyle = `background-color: ${brightColor}; border-color: ${darkColor};`;
