Added my current formation

--- a/index.html
+++ b/index.html
@@ -753,6 +753,16 @@
         <span></span>
 
         <details open>
+            <summary>Master Of Engineering</summary>
+            <p>2024 ~</p>
+            <div>
+                <p>
+                    It's a dual study in the field of IT which takes place over 3 years. I choose to study at home through distance learning and work physically at my company.
+                </p>
+            </div>
+        </details>
+
+        <details open>
             <summary>BTS SIO - SLAM</summary>
             <p>2022 - 2024</p>
             <div>
