--- a/index.html
+++ b/index.html
@@ -317,6 +317,13 @@
             box-shadow: 0px 3px 2px rgb(28 26 23 / 40%);
         }
 
+        .projects_item_badges>div>span {
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         .projects_item_badge_color {
             padding: 1px;
             padding-left: 6px;
@@ -454,12 +461,8 @@
                 flex-wrap: wrap;
             }
 
-            .projects_item_badges>div>p {
-                font-size: 0.6rem;
-            }
-
             .projects_item_badges>div>span {
-                font-size: 0.6rem;
+                font-size: 0.8rem;
             }
         }
 
