feat: better theme button

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
     <div class="container py-3 py-md-4 py-lg-5">
         <div class="card">
-            <div class="card-header d-flex align-items-center">
+            <div class="card-header d-flex align-items-center justify-content-between">
                 <h3 class="m-0"><i class="bi bi-info-circle-fill me-3"></i>My informations</h3>
-                <div class="btn-group ms-auto" role="group">
+                <div class="d-flex gap-2">
                     <input type="checkbox" class="btn-check" id="theme" autocomplete="off">
-                    <label class="btn btn-outline-secondary" title="Theme" for="theme"></label>
+                    <label class="btn btn-sm btn-outline-secondary rounded" title="Theme" for="theme"></label>
                 </div>
             </div>
             <div class="card-body py-4">
