--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <meta name="keywords" content="Portfolio, HTML, Bootstrap, Jquery">
     <meta name="description" content="My one page portfolio." key="desc">
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+
+        * {
+            font-family: "Silkscreen", sans-serif;
+            font-optical-sizing: auto;
+            font-style: normal;
+        }
+    </style>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
@@ -22,7 +32,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <div class="container py-3 py-md-4 py-lg-5">
-        <div class="card">
+        <div class="card shadow">
             <div class="card-header d-flex align-items-center justify-content-between">
                 <h3 class="m-0"><i class="bi bi-info-circle-fill me-3"></i>My informations</h3>
                 <div class="d-flex gap-2">
@@ -43,15 +53,15 @@
                     </div>
                     <div class="col-12 mt-5 d-flex justify-content-center">
                         <i class="bi bi-chat-right-text-fill me-3"></i>
-                        <p class="card-text col-10 col-lg-6">
-                            Hi! I'm Gaël Lopes Da Silva. I'm a employed web developer and also a student in IT
-                            science.
-                            <br>
-                            If a social media isn't listed here, it probably isn't me.
+                        <p class="card-text col-10 col-lg-7">
+                            Hi, I'm Gaël Lopes Da Silva — a passionate web developer and IT science student.
+                            I’m currently working professionally in web development while continuing to deepen my
+                            knowledge through academic studies. If you come across a social media profile that’s not
+                            listed here, it’s probably not me!
                         </p>
                     </div>
                     <div class="col-12 mt-4 d-flex justify-content-center">
-                        <ul class="m-0 col-10 col-lg-6">
+                        <ul class="m-0 col-10 col-lg-7">
                             <li>
                                 <a class="card-link"
                                     href="https://github.com/Gael-Lopes-Da-Silva">github.com/gael-lopes-da-silva</a> -
